welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:6: error: not found: value estFaceAuMur
  while (estFaceAuMur==false)
         ^