welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
    do {avance()}
  while (estSurBiscuit==false)
  prendBiscuit()
  do {recule()}
  while (estFaceAuMur==false)
  poseBiscuit()
  
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}